--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="About Kim Nguyen, a front-end developer based in USA"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,12 +20,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/src/style.css" />
-    <title>About Kim Nguyen</title>
+    <title>About me - Kim Nguyen</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Kim Nguyen</a>
+        <a class="navbar-brand" href="/" title="Homepage">Kim Nguyen</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,13 +40,25 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/" title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a
+                class="nav-link active"
+                href="/about.html"
+                title="About Kim Nguyen"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Kim Nguyen"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -54,13 +70,25 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="/images/yoga.png"
+            class="img-fluid p-2 mb-4 shadow rounded"
+            alt="Yoga project"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="/images/weather.png"
+            class="img-fluid p-2 mb-4 shadow rounded"
+            alt="Weather project"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="/images/yogurt.png"
+            class="img-fluid p-2 mb-4 shadow rounded"
+            alt="Yogurt project"
+          />
         </div>
       </div>
     </div>
