--- a/index.html
+++ b/index.html
@@ -146,10 +146,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a
-              href="#"
-              class="primary-link project-link"
-              title="Weather project"
+            <a href="#" class="primary-link project-link" title="Yogurt project"
               >Launch Yogurt App</a
             >
           </div>
